--- a/force-app/main/default/classes/JobApplicationTriggerHandler.cls
+++ b/force-app/main/default/classes/JobApplicationTriggerHandler.cls
@@ -1,4 +1,6 @@
 public with sharing class JobApplicationTriggerHandler {
+    
+    
 
     public static void createTaskFromStatus(List<Job_Application__c> jobApp) {
         List<Task> tasksToInsert = new List<Task>();
@@ -12,5 +14,17 @@ public with sharing class JobApplicationTriggerHandler {
         
         insert tasksToInsert;
     }
-
-}    
+    
+    public static void createAppFollowUpDate (List<Job_Application__c> jobApplications){
+        for (Job_Application__c jobAppl : jobApplications) {
+            try {
+            Date today = Date.today();
+            Date followUpDate = today.addDays(30);
+            jobAppl.Follow_up_date__c = followUpDate;
+            System.debug('Follow_up_date__c ' + followUpDate);
+            } catch (Exception e) {
+                System.debug('Error updating Follow_up_date__c: ' + e.getMessage());
+       	    }	
+        }	
+    }
+}
