--- a/force-app/main/default/classes/CloseStaleApplications_Test.cls
+++ b/force-app/main/default/classes/CloseStaleApplications_Test.cls
@@ -2,28 +2,10 @@
 public with sharing class CloseStaleApplications_Test {
     @IsTest
     public static void testCloseStaleApplications_Schedule() {
-         // Create test data
-        Account testAccount1 = new Account(Name = 'Test Account');
-        insert testAccount1;
-
-        List<Contact> testContacts = new List<Contact>();
-        Contact testContact1 = new Contact(LastName = 'Test', AccountId = testAccount1.Id, Role__c = 'Recruiter');
-        insert testContact1;
-
-        Job__c testJob = new Job__c(Name = 'Test Job', Company__c = testAccount1.Id);
-        insert testJob;
-
-        Job_Application__c testJobApplication = new Job_Application__c(
-            Name = 'Test Job Application',
-            Company_Name__c = testAccount1.id,
-            Job__c = testJob.Id,
-            Applicant__c = [SELECT Id FROM User WHERE IsActive = true LIMIT 1].Id,
-            Primary_Contact__c = testContact1.Id,
-            Status__c = 'Saved',
-            Follow_up_date__c = Date.today().addDays(-45)
-        );   
-        System.debug('testJobApplication: ' + testJobApplication);
-        insert testJobApplication;
+        
+         // Call the TestDataFactory class to create test data
+        List<Job_Application__c> testJobApplications = TestDataFactory.createTestData();
+        Job_Application__c testJobApplication = testJobApplications[0];
 
         // Schedule the CloseStaleApplications_Schedulable class for execution
         Test.startTest();
@@ -36,6 +18,8 @@ public with sharing class CloseStaleApplications_Test {
         System.schedule('CloseStaleApplsTest', cron, closeStaleApplications);
         closeStaleApplications.execute(null);
         Test.stopTest();
+
+        
 
         // Query the updated job applications
         List<Job_Application__c> updatedJobApplications = [SELECT Id, Status__c 
