--- a/force-app/main/default/classes/JobApplicationTriggerHandler_Test.cls
+++ b/force-app/main/default/classes/JobApplicationTriggerHandler_Test.cls
@@ -3,29 +3,10 @@ public with sharing class JobApplicationTriggerHandler_Test {
 
     @isTest
     static void testCreateTaskFromStatus() {
+
         // Test data setup
-        
-        Account testAccount1 = new Account(Name = 'Test Account');
-        insert testAccount1;
-
-        List<Contact> testContacts = new List<Contact>();
-        Contact testContact1 = new Contact(LastName = 'Test', AccountId = testAccount1.Id, Role__c = 'Recruiter');
-        insert testContact1;
-
-        Job__c testJob = new Job__c(Name = 'Test Job', Company__c = testAccount1.Id);
-        insert testJob;
-
-        Job_Application__c testJobApplication = new Job_Application__c(
-            Name = 'Test Job Application',
-            Company_Name__c = testAccount1.id,
-            Job__c = testJob.Id,
-            Applicant__c = [SELECT Id FROM User WHERE IsActive = true LIMIT 1].Id,
-            Primary_Contact__c = testContact1.Id,
-            Status__c = 'Saved'
-        );
-        
-        insert testJobApplication;
-        System.debug('The test application: ' + testJobApplication);
+        List<Job_Application__c> testJobApplications = TestDataFactory.createTestData();
+        Job_Application__c testJobApplication = testJobApplications[0];
 
         // Test execution
         Test.startTest();
@@ -37,4 +18,23 @@ public with sharing class JobApplicationTriggerHandler_Test {
         System.debug('The generated Task: ' + tasks);
         Assert.areEqual(2, tasks.size(), 'Expected 1 task to be created');
     }
+
+    @isTest
+    static void testCreateAppFollowUpDate() {
+
+        // Test data setup
+        List<Job_Application__c> testJobApplications = TestDataFactory.createTestData();
+        Job_Application__c testJobApplication = testJobApplications[0];
+
+
+        // Test execution
+        Test.startTest();
+        JobApplicationTriggerHandler.createAppFollowUpDate(new List<Job_Application__c>{testJobApplication});
+        Test.stopTest();
+
+        // Test verification
+        Job_Application__c updatedJobApplication = [SELECT Follow_up_date__c FROM Job_Application__c WHERE Id = :testJobApplication.Id];
+        System.assertEquals(Date.today().addDays(30), updatedJobApplication.Follow_up_date__c, 'Follow-up date not set correctly');
+    }
+    
 }
