- make naming more consistent - more comments - better file names

--- a/force-app/main/default/classes/ButtonForJooble.cls
+++ b/force-app/main/default/classes/ButtonForJooble.cls
@@ -2,6 +2,6 @@ public class ButtonForJooble {
     @AuraEnabled
     public static void executeJoobleIntegration() {
         JoobleIntegration joobleIntegrationInstance = new JoobleIntegration();
-        joobleIntegrationInstance.JoobleIntegration();
+        joobleIntegrationInstance.fetchJoobleJobs();
     }
 }
