--- a/force-app/main/default/classes/InterviewEmail_Test.cls
+++ b/force-app/main/default/classes/InterviewEmail_Test.cls
@@ -1,14 +1,15 @@
 /*
- * Test that :
- *  - An interview with a NULL/Invalid time doesn't get scheduled. The expected behaciour is that
- *   the trigger for insert will throw an exception
- *  - A test interview with a valid time gets scheduled. 
- *   This is done by checking if there is a cron expression with the same time as ours scheduled Email Job
- *   in the list of Cron Triggers
+ *Test that :
+ * - An interview with a NULL/Invalid time doesn't get scheduled. The expected behaciour is that
+ *   the trigger for insert Job_interview_c will throw an exception
+ * 
+ * - A bunch of interviews with a valid time gets scheduled. 
+ *   This is done by checking that our CronJob is submitted. We also check that expected number of
+ *   emails have been sent with the right Subject
 */
 
 @isTest
-public with sharing class InterviewEmailTest {
+public with sharing class InterviewEmail_Test {
     @isTest
     static void interviewEmailTestInvalidDate() {
         List <User> users = new List <User> ();
@@ -18,12 +19,15 @@ public with sharing class InterviewEmailTest {
         Job__c job = new Job__c(Title__c = 'Salesforce Developer',
                                 Company_Name__c = 'Cloudcode');
         insert job;
+
+        //create a job and application for a user
         Job_Application__c jobApp = new Job_Application__c(Job__c = job.id, Name='testClassJob1',
                                                            Applicant__c = users[0].id);
         insert jobApp;
         Time intTime = DateTime.now().time().addMinutes(1);
         Date intDate = Date.today().addDays(1);
 
+        //create a job interviewe and for above application
         Job_Interview__c jobInt = new Job_Interview__c(Interview_Time__c = NULL,
                                                        Interview_Date__c = intDate,
                                                        Job_Application__c = jobApp.id);
@@ -38,6 +42,10 @@ public with sharing class InterviewEmailTest {
         Test.stopTest();
     }
 
+    /**
+     * create 4 jobs with valid date time and check that they get scheduled
+     * and reminder emails are indeed sent
+     */
     @isTest
     static void interviewEmailTestvalidDate() {
         List <User> users = new List <User> ();
@@ -60,20 +68,20 @@ public with sharing class InterviewEmailTest {
                                                        Interview_Date__c = intDate,
                                                        Job_Application__c = jobApp.id));
         }
-        System.debug('>>> + '  + jobInts);
-		//Check that a NULL time throws exception
+
         Test.startTest();
         insert jobInts;
         Test.stopTest();
 
-       List<EmailMessage> emailMessages = [SELECT Id, Subject, TextBody FROM EmailMessage];
-       System.debug('emailMessages' + emailMessages);
+        //check that our job got scheduled
+        List<CronTrigger> scheduledJobs = [SELECT Id, CronJobDetail.Name, CronJobDetail.JobType, State, NextFireTime, StartTime
+                                            FROM CronTrigger WHERE CronJobDetail.Name = :'InterviewReminder'];
 
-       List<CronTrigger> scheduledJobs = [SELECT Id, CronJobDetail.Name, CronJobDetail.JobType, State, NextFireTime, StartTime
-       FROM CronTrigger WHERE CronJobDetail.Name = :'InterviewReminder'];
-
-       System.debug('>>>> ' + scheduledJobs[0].CronJobDetail.Name);
-       Assert.areEqual(scheduledJobs[0].CronJobDetail.Name, 'InterviewReminder',
+        System.assertEquals(scheduledJobs[0].CronJobDetail.Name, 'InterviewReminder',
                         'Email reminder Job was not scheduled');
+
+        //check that emails got sent for all 4 interviews with the right subject
+        List<EmailMessage> emailMessages = [SELECT Id, Subject, TextBody FROM EmailMessage];
+        System.assertEquals(emailMessages.size(), 4, 'Expected 4 emails' + 'Sent ' + emailMessages.size());
     }
 }
